--- a/scripts/beats/linux_vm_example/auditbeat.yml
+++ b/scripts/beats/linux_vm_example/auditbeat.yml
@@ -68,85 +68,87 @@ auditbeat.modules:
   - /usr/sbin
   recursive: true
 
-- module: system
-  datasets:
-    - host # General host information, e.g. uptime, IPs
-    - user # User information
-    - login # Logins/logouts
-    - package # dpkg/rpm package manager logs
-  period: 1m
-  state.period: 12h
-  user.detect_password_changes: true
+# TODO: system module is apparently only available in the non-OSS basic lisence :-(
 
-- module: system
-  datasets:
-    - process # Started and stopped processes
-    - socket  # Opened and closed sockets
-  period: 1s
+# - module: system
+#   datasets:
+#     - host # General host information, e.g. uptime, IPs
+#     - user # User information
+#     - login # Logins/logouts
+#     - package # dpkg/rpm package manager logs
+#   period: 1m
+#   state.period: 12h
+#   user.detect_password_changes: true
 
-  # drop noise
-  processors:
-  - drop_event:
-      when:
-        or:
-          - and:
-              - equals:
-                  event.module: 'system'
-              - equals:
-                  event.dataset: 'socket'
-              - equals:
-                  destination.ip: '127.0.0.1'
-              - equals:
-                  source.ip: '127.0.0.1'
-          - and:
-              - equals:
-                  event.module: 'system'
-              - equals:
-                  event.dataset: 'socket'
-              - equals:
-                  destination.ip: "${BEAT_ES_HOST}"
-          - and:
-              - equals:
-                  event.module: 'system'
-              - equals:
-                  event.dataset: 'socket'
-              - equals:
-                  destination.ip: "${BEAT_KIBANA_HOST}"
-          - and:
-              - equals:
-                  event.module: 'system'
-              - equals:
-                  event.dataset: 'process'
-              - or:
-                  - equals:
-                      process.executable: '/bin/sleep'
-                  - equals:
-                      process.executable: '/usr/bin/sort'
-                  - equals:
-                      process.executable: '/usr/bin/tail'
-                  - equals:
-                      process.executable: '/usr/bin/clear'
-                  - equals:
-                      process.executable: '/usr/bin/head'
-                  - equals:
-                      process.executable: '/bin/date'
-                  - equals:
-                      process.executable: '/bin/ls'
-                  - equals:
-                      process.executable: '/usr/bin/stat'
-                  - equals:
-                      process.executable: '/usr/bin/cut'
-                  - equals:
-                      process.executable: '/usr/bin/xargs'
-                  - equals:
-                      process.executable: '/usr/bin/tr'
-                  - equals:
-                      process.executable: '/bin/grep'
-                  - equals:
-                      process.executable: '/bin/sed'
-                  - equals:
-                      process.executable: '/bin/df'
-                  - equals:
-                      process.executable: '/usr/bin/du'
-                  - equals:
-                      process.executable: '/usr/bin/gawk'
+# - module: system
+#   datasets:
+#     - process # Started and stopped processes
+#     - socket  # Opened and closed sockets
+#   period: 1s
+
+#   # drop noise
+#   processors:
+#   - drop_event:
+#       when:
+#         or:
+#           - and:
+#               - equals:
+#                   event.module: 'system'
+#               - equals:
+#                   event.dataset: 'socket'
+#               - equals:
+#                   destination.ip: '127.0.0.1'
+#               - equals:
+#                   source.ip: '127.0.0.1'
+#           - and:
+#               - equals:
+#                   event.module: 'system'
+#               - equals:
+#                   event.dataset: 'socket'
+#               - equals:
+#                   destination.ip: "${BEAT_ES_HOST}"
+#           - and:
+#               - equals:
+#                   event.module: 'system'
+#               - equals:
+#                   event.dataset: 'socket'
+#               - equals:
+#                   destination.ip: "${BEAT_KIBANA_HOST}"
+#           - and:
+#               - equals:
+#                   event.module: 'system'
+#               - equals:
+#                   event.dataset: 'process'
+#               - or:
+#                   - equals:
+#                       process.executable: '/bin/sleep'
+#                   - equals:
+#                       process.executable: '/usr/bin/sort'
+#                   - equals:
+#                       process.executable: '/usr/bin/tail'
+#                   - equals:
+#                       process.executable: '/usr/bin/clear'
+#                   - equals:
+#                       process.executable: '/usr/bin/head'
+#                   - equals:
+#                       process.executable: '/bin/date'
+#                   - equals:
+#                       process.executable: '/bin/ls'
+#                   - equals:
+#                       process.executable: '/usr/bin/stat'
+#                   - equals:
+#                       process.executable: '/usr/bin/cut'
+#                   - equals:
+#                       process.executable: '/usr/bin/xargs'
+#                   - equals:
+#                       process.executable: '/usr/bin/tr'
+#                   - equals:
+#                       process.executable: '/bin/grep'
+#                   - equals:
+#                       process.executable: '/bin/sed'
+#                   - equals:
+#                       process.executable: '/bin/df'
+#                   - equals:
+#                       process.executable: '/usr/bin/du'
+#                   - equals:
+#                       process.executable: '/usr/bin/gawk'
