work on a powershell script to automate the setup for windows a little easier

--- a/scripts/beats/linux_vm_example/auditbeat.yml
+++ b/scripts/beats/linux_vm_example/auditbeat.yml
@@ -68,7 +68,7 @@ auditbeat.modules:
   - /usr/sbin
   recursive: true
 
-# TODO: system module is apparently only available in the non-OSS basic lisence :-(
+# TODO: system module is apparently only available in the non-OSS basic license :-(
 
 # - module: system
 #   datasets:
