--- a/scripts/beats/windows_vm_example/auditbeat.yml
+++ b/scripts/beats/windows_vm_example/auditbeat.yml
@@ -65,7 +65,7 @@ auditbeat.modules:
   # - '(?i)\\(assembly|CatRoot|CbsTemp|databases?|Deleted|diagnostics?|Log(File)?s?|Notifications?|Packages?|Prefetch|schemas?|servicing|Sessions?|SleepStudy|SoftwareDistribution|Tasks?|Temp|tracing|wbem|WinMetadata|WinSAT|WinSxS)\\?'
   # - '(?i)cache'
 
-# TODO: system module is apparently only available in the non-OSS basic lisence :-(
+# TODO: system module is apparently only available in the non-OSS basic license :-(
 
 # - module: system
 #   datasets:
