--- a/logstash/maps/notice_license.yaml
+++ b/logstash/maps/notice_license.yaml
@@ -2,6 +2,6 @@
 "ATTACK": " BSD-3-Clause License"
 "HTTPATTACKS": "BSD-2-Clause License"
 "SNIFFPASS": "BSD-3-Clause License"
-"Corelight": "https://raw.githubusercontent.com/corelight/bro-xor-exe-plugin/master/COPYING"
+"Corelight": "https://github.com/corelight"
 "CVE_2020_0601": "https://raw.githubusercontent.com/0xxon/cve-2020-0601/master/COPYING"
 "CVE_2020_13777": "https://raw.githubusercontent.com/0xxon/cve-2020-13777/master/COPYING"
