set protocol to udp for wireguard

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2123,7 +2123,10 @@ filter {
     mutate {
       # TODO: is this technically accurate? should it be "noise" instead/as well?
       id => "mutate_add_field_zeek_service_wireguard"
-      add_field =>  { "[zeek_cols][service]" => "wireguard" }
+      add_field =>  {
+        "[zeek_cols][proto]" => "udp"
+        "[zeek_cols][service]" => "wireguard"
+      }
     }
 
   } else if ([source] == "ssh") {
