drop noisy notice for wireguard sessions

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3233,6 +3233,11 @@ filter {
                                                       merge => { "[zeek][fuid]" => "[@metadata][decrypted_xor_fuid]" } } }
     }
 
+    if ([zeek_notice][note] == "Signatures::Sensitive_Signature") and ([zeek_notice][msg] =~ /WireGuard Handshake/) {
+      # I don't want a signature for wireguard handshake initiation
+      drop { id => "drop_zeek_ignored_notice_wg" }
+    }
+
   } else if ([source] == "ntp") {
     #############################################################################################################################
     # ntp.log specific logic
