minor fixes for wireguard parser

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2109,7 +2109,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_noise"
-        init => "$zeek_noise_field_names = [ 'ts', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'msg_type', 'sender', 'receiver', 'unenc_ephemeral', 'enc_static', 'enc_timestamp', 'enc_nothing', 'nonce', 'enc_cookie', 'mac1', 'mac2', 'enc_payload_len', 'enc_payload' ]"
+        init => "$zeek_noise_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'msg_type', 'sender', 'receiver', 'unenc_ephemeral', 'enc_static', 'enc_timestamp', 'enc_nothing', 'nonce', 'enc_cookie', 'mac1', 'mac2', 'enc_payload_len', 'enc_payload' ]"
         code => "event.set('[zeek_cols]', $zeek_noise_field_names.zip(event.get('[message]')).to_h)"
       }
     }
