--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -51,6 +51,20 @@ x-zeek-variables: &zeek-variables
   EXTRACTED_FILE_ENABLE_FRESHCLAM : 'false'
   EXTRACTED_FILE_PIPELINE_DEBUG : 'false'
   EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA : 'false'
+  # environment variables for tweaking Zeek at runtime (see local.zeek)
+  # set to a non-blank value to disable the corresponding feature
+  ZEEK_DISABLE_MITRE_BZAR : ''
+  ZEEK_DISABLE_HASH_ALL_FILES : ''
+  ZEEK_DISABLE_LOG_PASSWORDS : ''
+  ZEEK_DISABLE_MODBUS_TRACKING : ''
+  ZEEK_DISABLE_MQTT : ''
+  ZEEK_DISABLE_PE_XOR : ''
+  ZEEK_DISABLE_QUIC : ''
+  ZEEK_DISABLE_SSL_VALIDATE_CERTS : ''
+  ZEEK_DISABLE_TELNET : ''
+  ZEEK_DISABLE_TRACK_ALL_ASSETS : ''
+  ZEEK_DISABLE_WIREGUARD : ''
+  ZEEK_DISABLE_WIREGUARD_TRANSPORT_PACKETS : 'true'
 
 x-logstash-variables: &logstash-variables
   LOGSTASH_OUI_LOOKUP  : 'true'
@@ -108,7 +122,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 
 services:
   elasticsearch:
-    image: malcolmnetsec/elasticsearch-oss:2.1.1
+    image: malcolmnetsec/elasticsearch-oss:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -143,7 +157,7 @@ services:
       retries: 3
       start_period: 180s
   kibana:
-    image: malcolmnetsec/kibana-oss:2.1.1
+    image: malcolmnetsec/kibana-oss:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -169,7 +183,7 @@ services:
       retries: 3
       start_period: 210s
   elastalert:
-    image: malcolmnetsec/elastalert:2.1.1
+    image: malcolmnetsec/elastalert:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -197,7 +211,7 @@ services:
       retries: 3
       start_period: 210s
   curator:
-    image: malcolmnetsec/curator:2.1.1
+    image: malcolmnetsec/curator:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -216,7 +230,7 @@ services:
       retries: 3
       start_period: 30s
   logstash:
-    image: malcolmnetsec/logstash-oss:2.1.1
+    image: malcolmnetsec/logstash-oss:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -227,7 +241,7 @@ services:
       << : *common-beats-variables
       << : *common-lookup-variables
       ES_HOSTS : 'elasticsearch:9200'
-      LS_JAVA_OPTS : '-Xms2g -Xmx2g -Djava.security.egd=file:/dev/./urandom'
+      LS_JAVA_OPTS : '-Xms2g -Xmx2g -Xss2m -Djava.security.egd=file:/dev/./urandom'
     depends_on:
       - elasticsearch
     expose:
@@ -249,7 +263,7 @@ services:
       retries: 3
       start_period: 600s
   filebeat:
-    image: malcolmnetsec/filebeat-oss:2.1.1
+    image: malcolmnetsec/filebeat-oss:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -286,7 +300,7 @@ services:
       retries: 3
       start_period: 60s
   moloch:
-    image: malcolmnetsec/moloch:2.1.1
+    image: malcolmnetsec/moloch:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -325,7 +339,7 @@ services:
       retries: 3
       start_period: 210s
   zeek:
-    image: malcolmnetsec/zeek:2.1.1
+    image: malcolmnetsec/zeek:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -351,7 +365,7 @@ services:
       retries: 3
       start_period: 60s
   file-monitor:
-    image: malcolmnetsec/file-monitor:2.1.1
+    image: malcolmnetsec/file-monitor:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -371,7 +385,7 @@ services:
       retries: 3
       start_period: 60s
   pcap-capture:
-    image: malcolmnetsec/pcap-capture:2.1.1
+    image: malcolmnetsec/pcap-capture:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -397,7 +411,7 @@ services:
       retries: 3
       start_period: 60s
   pcap-monitor:
-    image: malcolmnetsec/pcap-monitor:2.1.1
+    image: malcolmnetsec/pcap-monitor:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -420,7 +434,7 @@ services:
       retries: 3
       start_period: 90s
   upload:
-    image: malcolmnetsec/file-upload:2.1.1
+    image: malcolmnetsec/file-upload:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -446,7 +460,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:2.1.1
+    image: malcolmnetsec/htadmin:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -468,7 +482,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:2.1.1
+    image: malcolmnetsec/freq:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -486,7 +500,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:2.1.1
+    image: malcolmnetsec/name-map-ui:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -507,7 +521,7 @@ services:
       retries: 3
       start_period: 60s
   nginx-proxy:
-    image: malcolmnetsec/nginx-proxy:2.1.1
+    image: malcolmnetsec/nginx-proxy:2.2.0
     restart: "no"
     stdin_open: false
     tty: true
