Allow multiple file scanners (VirusTotal, ClamAV, Malass) to be run instead of having to just select one.

--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -35,19 +35,52 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
-[program:scanner]
-command=/usr/local/bin/zeek_carve_scanner.py
+[group:scanners]
+programs=virustotal,clamav,malass
+
+[program:virustotal]
+command=/usr/local/bin/vtot_scan.py
   --verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG)s
   --extra-verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA)s
   --start-sleep %(ENV_EXTRACTED_FILE_SCANNER_START_SLEEP)s
   --vtot-api %(ENV_VTOT_API2_KEY)s
   --vtot-req-limit %(ENV_VTOT_REQUESTS_PER_MINUTE)s
+autostart=%(ENV_EXTRACTED_FILE_ENABLE_VTOT)s
+startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
+startretries=0
+stopasgroup=true
+killasgroup=true
+directory=/data/zeek/extract_files
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:clamav]
+command=/usr/local/bin/clam_scan.py
+  --verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG)s
+  --extra-verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA)s
+  --start-sleep %(ENV_EXTRACTED_FILE_SCANNER_START_SLEEP)s
+  --clamav %(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
+  --clamav-socket "%(ENV_CLAMD_SOCKET_FILE)s"
+autostart=%(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
+startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
+startretries=0
+stopasgroup=true
+killasgroup=true
+directory=/data/zeek/extract_files
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:malass]
+command=/usr/local/bin/malass_scan.py
+  --verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG)s
+  --extra-verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA)s
+  --start-sleep %(ENV_EXTRACTED_FILE_SCANNER_START_SLEEP)s
   --malass-host "%(ENV_MALASS_HOST)s"
   --malass-port %(ENV_MALASS_PORT)s
   --malass-limit %(ENV_MALASS_MAX_REQUESTS)s
-  --clamav %(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
-  --clamav-socket "%(ENV_CLAMD_SOCKET_FILE)s"
-autostart=true
+autostart=%(ENV_EXTRACTED_FILE_ENABLE_MALASS)s
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
 stopasgroup=true
