--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -36,7 +36,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [group:scanners]
-programs=virustotal,clamav,malass
+programs=virustotal,clamav,yara,malass
 
 [program:virustotal]
 command=/usr/local/bin/vtot_scan.py
@@ -63,6 +63,23 @@ command=/usr/local/bin/clam_scan.py
   --clamav %(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
   --clamav-socket "%(ENV_CLAMD_SOCKET_FILE)s"
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
+startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
+startretries=0
+stopasgroup=true
+killasgroup=true
+directory=/data/zeek/extract_files
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:yara]
+command=/usr/local/bin/yara_scan.py
+  --verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG)s
+  --extra-verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA)s
+  --start-sleep %(ENV_EXTRACTED_FILE_SCANNER_START_SLEEP)s
+  --yara %(ENV_EXTRACTED_FILE_ENABLE_YARA)s
+  --yara-custom-only %(ENV_EXTRACTED_FILE_YARA_CUSTOM_ONLY)s
+autostart=%(ENV_EXTRACTED_FILE_ENABLE_YARA)s
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
 stopasgroup=true
