working on idaholab/malcolm#148, some fixes to signatures dashboard/parsing

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3347,14 +3347,17 @@ filter {
             code => "
                 matchesHash = Hash.new
                 idArray = Array.new
-                engineArray = Array.new
                 event.get('[zeek_signatures][event_message]').split(';').each { |hit|
                   nameAndEngines = hit.split(/(.+?)\s*<(.+)>/)
                   nameAndEngines[2].split(',').each { |engine|
-                    matchesHash[engine] = nameAndEngines[1]
+                    unless matchesHash.key?(engine)
+                      matchesHash[engine] = Array.new
+                    end
+                    matchesHash[engine].push(nameAndEngines[1])
+                    idArray.push(nameAndEngines[1])
                   }
                 }
-                event.set('[zeek_signatures][signature_id]', matchesHash.values.uniq)
+                event.set('[zeek_signatures][signature_id]', idArray.uniq)
                 event.set('[zeek_signatures][engine]', matchesHash.keys)
                 event.set('[zeek_signatures][hits]', matchesHash)"
         }
