working on idaholab/malcolm#148, adding Yara as a file scanner to the hedgehog iso

--- a/sensor-iso/interface/sensor_ctl/supervisor.d/zeek.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/zeek.conf
@@ -1,5 +1,5 @@
 [group:zeek]
-programs=zeekctl,watcher,scanner,logger
+programs=zeekctl,watcher,virustotal,clamav,yara,malass,logger
 
 [program:zeekctl]
 command=/opt/zeek/bin/zeekdeploy.sh
@@ -22,23 +22,58 @@ startsecs=100
 startretries=3
 stopasgroup=true
 killasgroup=true
-autostart=%(ENV_AUTOSTART_ZEEK_FILE_WATCH)s
+autostart=%(ENV_ZEEK_FILE_WATCH)s
 directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
-[program:scanner]
+[program:virustotal]
 command=/usr/bin/python3.7 /usr/local/bin/zeek_carve_scanner.py
   --start-sleep 20
   --vtot-api "%(ENV_VTOT_API2_KEY)s"
-  --malass-host "%(ENV_MALASS_HOST)s"
-  --malass-port %(ENV_MALASS_PORT)s
-  --clamav %(ENV_AUTOSTART_CLAMAV_SERVICE)s
+startsecs=30
+startretries=3
+stopasgroup=true
+killasgroup=true
+autostart=%(ENV_ZEEK_FILE_SCAN_VTOT)s
+directory=%(ENV_ZEEK_LOG_PATH)s
+user=sensor
+
+[program:clamav]
+command=/usr/bin/python3.7 /usr/local/bin/zeek_carve_scanner.py
+  --start-sleep 20
+  --clamav %(ENV_ZEEK_FILE_SCAN_CLAMAV)s
   --clamav-socket "%(ENV_SUPERVISOR_PATH)s/clamav/clamd.ctl"
 startsecs=30
 startretries=3
 stopasgroup=true
 killasgroup=true
-autostart=%(ENV_AUTOSTART_ZEEK_FILE_WATCH)s
+autostart=%(ENV_ZEEK_FILE_SCAN_CLAMAV)s
+directory=%(ENV_ZEEK_LOG_PATH)s
+user=sensor
+
+[program:yara]
+command=/usr/bin/python3.7 /usr/local/bin/zeek_carve_scanner.py
+  --start-sleep 20
+  --yara %(ENV_ZEEK_FILE_SCAN_YARA)s
+  --yara-custom-only "%(ENV_EXTRACTED_FILE_YARA_CUSTOM_ONLY)s"
+startsecs=30
+startretries=3
+stopasgroup=true
+killasgroup=true
+autostart=%(ENV_ZEEK_FILE_SCAN_YARA)s
+directory=%(ENV_ZEEK_LOG_PATH)s
+user=sensor
+
+[program:malass]
+command=/usr/bin/python3.7 /usr/local/bin/zeek_carve_scanner.py
+  --start-sleep 20
+  --malass-host "%(ENV_MALASS_HOST)s"
+  --malass-port %(ENV_MALASS_PORT)s
+startsecs=30
+startretries=3
+stopasgroup=true
+killasgroup=true
+autostart=%(ENV_ZEEK_FILE_SCAN_MALASS)s
 directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
@@ -52,6 +87,6 @@ startsecs=20
 startretries=3
 stopasgroup=true
 killasgroup=true
-autostart=%(ENV_AUTOSTART_ZEEK_FILE_WATCH)s
+autostart=%(ENV_ZEEK_FILE_WATCH)s
 directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
