--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -30,6 +30,8 @@ export MOLOCH_PACKET_THREADS=5
 export MOLOCH_PACKET_ACL=
 export PROTOLOGBEAT_PORT=9515
 export PROTOLOGBEAT_INTERVAL=10
+export EXTRACTED_FILE_YARA_CUSTOM_ONLY=false
+export YARA_RULES_DIR=/opt/yara-rules
 
 # affects Moloch only for now: beats values are stored in keystores per-beat
 export ES_PROTOCOL=https
@@ -39,8 +41,13 @@ export ES_USERNAME=sensor
 export ES_PASSWORD=%70%61%73%73%77%6F%72%64
 export ES_SSL_VERIFY=none
 
+export ZEEK_FILE_WATCH=false
+export ZEEK_FILE_SCAN_CLAMAV=false
+export ZEEK_FILE_SCAN_VTOT=false
+export ZEEK_FILE_SCAN_MALASS=false
+export ZEEK_FILE_SCAN_YARA=false
+
 export AUTOSTART_AUDITBEAT=false
-export AUTOSTART_CLAMAV_SERVICE=false
 export AUTOSTART_CLAMAV_UPDATES=false
 export AUTOSTART_FILEBEAT=false
 export AUTOSTART_HEATBEAT=false
@@ -53,4 +60,3 @@ export AUTOSTART_PRUNE_ZEEK=false
 export AUTOSTART_SYSLOGBEAT=false
 export AUTOSTART_TCPDUMP=false
 export AUTOSTART_ZEEK=false
-export AUTOSTART_ZEEK_FILE_WATCH=false
