--- a/sensor-iso/moloch/Dockerfile
+++ b/sensor-iso/moloch/Dockerfile
@@ -12,7 +12,21 @@ ENV MOLOCHDIR "/opt/moloch"
 RUN sed -i "s/buster main/buster main contrib non-free/g" /etc/apt/sources.list && \
   apt-get -q update && \
   apt-get install -q -y --no-install-recommends \
-      curl iproute2 python python-dev sudo ruby ruby-dev rubygems build-essential && \
+    build-essential \
+    curl \
+    git-core \
+    iproute2 \
+    meson \
+    ninja-build \
+    python3-dev \
+    python3-pip \
+    python3-setuptools \
+    python3-wheel \
+    ruby \
+    ruby-dev \
+    rubygems \
+    sudo \
+    wget && \
   gem install --no-ri --no-rdoc fpm && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
