--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -10,6 +10,13 @@ export PCAP_SNAPLEN=0
 export PCAP_MAX_DISK_FILL=90
 export PCAP_PRUNE_CHECK_SECONDS=60
 
+export MOLOCH_VIEWER_PORT=8005
+export MOLOCH_PACKET_THREADS=5
+export MOLOCH_PACKET_ACL=
+
+export PROTOLOGBEAT_PORT=9515
+export PROTOLOGBEAT_INTERVAL=10
+
 export ZEEK_LOG_PATH=/home/sensor/bro_logs
 export ZEEK_MAX_DISK_FILL=90
 export ZEEK_PRUNE_CHECK_SECONDS=90
@@ -22,16 +29,18 @@ export ZEEK_EXTRACTOR_OVERRIDE_FILE=
 export EXTRACTED_FILE_MIN_BYTES=64
 export EXTRACTED_FILE_MAX_BYTES=134217728
 export EXTRACTED_FILE_PRESERVATION=quarantined
-export VTOT_API2_KEY=""
-export MALASS_HOST=""
-export MALASS_PORT=80
-export MOLOCH_VIEWER_PORT=8005
-export MOLOCH_PACKET_THREADS=5
-export MOLOCH_PACKET_ACL=
-export PROTOLOGBEAT_PORT=9515
-export PROTOLOGBEAT_INTERVAL=10
-export EXTRACTED_FILE_YARA_CUSTOM_ONLY=false
-export YARA_RULES_DIR=/opt/yara-rules
+export ZEEK_DISABLE_MITRE_BZAR=
+export ZEEK_DISABLE_HASH_ALL_FILES=
+export ZEEK_DISABLE_LOG_PASSWORDS=
+export ZEEK_DISABLE_MODBUS_TRACKING=
+export ZEEK_DISABLE_MQTT=
+export ZEEK_DISABLE_PE_XOR=
+export ZEEK_DISABLE_QUIC=
+export ZEEK_DISABLE_SSL_VALIDATE_CERTS=
+export ZEEK_DISABLE_TELNET=
+export ZEEK_DISABLE_TRACK_ALL_ASSETS=
+export ZEEK_DISABLE_WIREGUARD=
+export ZEEK_DISABLE_WIREGUARD_TRANSPORT_PACKETS=true
 
 # affects Moloch only for now: beats values are stored in keystores per-beat
 export ES_PROTOCOL=https
@@ -40,6 +49,12 @@ export ES_PORT=9200
 export ES_USERNAME=sensor
 export ES_PASSWORD=%70%61%73%73%77%6F%72%64
 export ES_SSL_VERIFY=none
+
+export VTOT_API2_KEY=""
+export MALASS_HOST=""
+export MALASS_PORT=80
+export EXTRACTED_FILE_YARA_CUSTOM_ONLY=false
+export YARA_RULES_DIR=/opt/yara-rules
 
 export ZEEK_FILE_WATCH=false
 export ZEEK_FILE_SCAN_CLAMAV=false
