--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -47,6 +47,8 @@ x-zeek-variables: &zeek-variables
   EXTRACTED_FILE_MAX_BYTES : 134217728
   VTOT_API2_KEY : '0'
   VTOT_REQUESTS_PER_MINUTE : 4
+  EXTRACTED_FILE_ENABLE_YARA : 'false'
+  EXTRACTED_FILE_YARA_CUSTOM_ONLY : 'false'
   EXTRACTED_FILE_ENABLE_CLAMAV : 'false'
   EXTRACTED_FILE_ENABLE_FRESHCLAM : 'false'
   EXTRACTED_FILE_PIPELINE_DEBUG : 'false'
@@ -122,7 +124,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 
 services:
   elasticsearch:
-    image: malcolmnetsec/elasticsearch-oss:2.2.1
+    image: malcolmnetsec/elasticsearch-oss:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -157,7 +159,7 @@ services:
       retries: 3
       start_period: 180s
   kibana:
-    image: malcolmnetsec/kibana-oss:2.2.1
+    image: malcolmnetsec/kibana-oss:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -183,7 +185,7 @@ services:
       retries: 3
       start_period: 210s
   elastalert:
-    image: malcolmnetsec/elastalert:2.2.1
+    image: malcolmnetsec/elastalert:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -211,7 +213,7 @@ services:
       retries: 3
       start_period: 210s
   curator:
-    image: malcolmnetsec/curator:2.2.1
+    image: malcolmnetsec/curator:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -230,7 +232,7 @@ services:
       retries: 3
       start_period: 30s
   logstash:
-    image: malcolmnetsec/logstash-oss:2.2.1
+    image: malcolmnetsec/logstash-oss:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -263,7 +265,7 @@ services:
       retries: 3
       start_period: 600s
   filebeat:
-    image: malcolmnetsec/filebeat-oss:2.2.1
+    image: malcolmnetsec/filebeat-oss:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -300,7 +302,7 @@ services:
       retries: 3
       start_period: 60s
   moloch:
-    image: malcolmnetsec/moloch:2.2.1
+    image: malcolmnetsec/moloch:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -311,7 +313,7 @@ services:
       << : *process-variables
       << : *common-upload-variables
       << : *moloch-variables
-      MOLOCH_VERSION : '2.3.2'
+      MOLOCH_VERSION : '2.4.0'
       VIRTUAL_HOST : 'moloch.malcolm.local'
       ES_HOST : 'elasticsearch'
       ES_PORT : 9200
@@ -339,7 +341,7 @@ services:
       retries: 3
       start_period: 210s
   zeek:
-    image: malcolmnetsec/zeek:2.2.1
+    image: malcolmnetsec/zeek:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -365,7 +367,7 @@ services:
       retries: 3
       start_period: 60s
   file-monitor:
-    image: malcolmnetsec/file-monitor:2.2.1
+    image: malcolmnetsec/file-monitor:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -378,14 +380,15 @@ services:
     volumes:
       - ./zeek-logs/extract_files:/data/zeek/extract_files
       - ./zeek-logs/current:/data/zeek/logs
+      - ./yara/rules:/yara-rules/custom:ro
     healthcheck:
-      test: ["CMD", "supervisorctl", "status", "watcher", "scanner", "logger"]
+      test: ["CMD", "supervisorctl", "status", "watcher", "logger"]
       interval: 30s
       timeout: 15s
       retries: 3
       start_period: 60s
   pcap-capture:
-    image: malcolmnetsec/pcap-capture:2.2.1
+    image: malcolmnetsec/pcap-capture:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -411,7 +414,7 @@ services:
       retries: 3
       start_period: 60s
   pcap-monitor:
-    image: malcolmnetsec/pcap-monitor:2.2.1
+    image: malcolmnetsec/pcap-monitor:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -434,7 +437,7 @@ services:
       retries: 3
       start_period: 90s
   upload:
-    image: malcolmnetsec/file-upload:2.2.1
+    image: malcolmnetsec/file-upload:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -460,7 +463,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:2.2.1
+    image: malcolmnetsec/htadmin:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -482,7 +485,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:2.2.1
+    image: malcolmnetsec/freq:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -500,7 +503,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:2.2.1
+    image: malcolmnetsec/name-map-ui:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -521,7 +524,7 @@ services:
       retries: 3
       start_period: 60s
   nginx-proxy:
-    image: malcolmnetsec/nginx-proxy:2.2.1
+    image: malcolmnetsec/nginx-proxy:2.3.0
     restart: "no"
     stdin_open: false
     tty: true
