--- a/sensor-iso/interface/sensor_ctl/supervisor.d/zeek.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/zeek.conf
@@ -1,5 +1,5 @@
 [group:zeek]
-programs=zeekctl,watcher,virustotal,clamav,yara,malass,logger
+programs=zeekctl,watcher,virustotal,clamav,yara,capa,malass,logger
 
 [program:zeekctl]
 command=/opt/zeek/bin/zeekdeploy.sh
@@ -61,6 +61,18 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_ZEEK_FILE_SCAN_YARA)s
+directory=%(ENV_ZEEK_LOG_PATH)s
+user=sensor
+
+[program:capa]
+command=/usr/bin/python3.7 /usr/local/bin/zeek_carve_scanner.py
+  --start-sleep 20
+  --capa %(ENV_ZEEK_FILE_SCAN_CAPA)s
+startsecs=30
+startretries=3
+stopasgroup=true
+killasgroup=true
+autostart=%(ENV_ZEEK_FILE_SCAN_CAPA)s
 directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
