--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -61,6 +61,7 @@ export ZEEK_FILE_SCAN_CLAMAV=false
 export ZEEK_FILE_SCAN_VTOT=false
 export ZEEK_FILE_SCAN_MALASS=false
 export ZEEK_FILE_SCAN_YARA=false
+export ZEEK_FILE_SCAN_CAPA=false
 
 export AUTOSTART_AUDITBEAT=false
 export AUTOSTART_CLAMAV_UPDATES=false
