--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -95,6 +95,7 @@ command=/usr/local/bin/capa_scan.py
   --extra-verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA)s
   --start-sleep %(ENV_EXTRACTED_FILE_SCANNER_START_SLEEP)s
   --capa %(ENV_EXTRACTED_FILE_ENABLE_CAPA)s
+  --capa-verbose %(ENV_EXTRACTED_FILE_CAPA_VERBOSE)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_CAPA)s
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
