--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -55,6 +55,7 @@ export MALASS_HOST=""
 export MALASS_PORT=80
 export EXTRACTED_FILE_YARA_CUSTOM_ONLY=false
 export YARA_RULES_DIR=/opt/yara-rules
+export CAPA_VERBOSE=false
 
 export ZEEK_FILE_WATCH=false
 export ZEEK_FILE_SCAN_CLAMAV=false
