--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ x-zeek-variables: &zeek-variables
   EXTRACTED_FILE_ENABLE_YARA : 'false'
   EXTRACTED_FILE_YARA_CUSTOM_ONLY : 'false'
   EXTRACTED_FILE_ENABLE_CAPA : 'false'
+  EXTRACTED_FILE_CAPA_VERBOSE : 'false'
   EXTRACTED_FILE_ENABLE_CLAMAV : 'false'
   EXTRACTED_FILE_ENABLE_FRESHCLAM : 'false'
   EXTRACTED_FILE_PIPELINE_DEBUG : 'false'
