this *should* fix the issues with the installer not working in BIOS. it should work in both bios and efi. fixes issue idaholab/Malcolm#26. testing in progress

--- a/malcolm-iso/config/includes.binary/install/preseed.cfg
+++ b/malcolm-iso/config/includes.binary/install/preseed.cfg
@@ -11,7 +11,7 @@ d-i preseed/include string preseed_base.cfg
 # install root filesystem on smallest non-USB disk
 
 d-i partman/early_command string \
-  ROOT_DISK=$(parted_devices | egrep "^($(find /sys/block -mindepth 1 -maxdepth 1 -type l \( -name '[hs]d*' -o -name 'nvme*' \) -exec ls -l '{}' ';' | grep -v "usb" | sed 's@^.*\([hs]d[a-z]\+\|nvme[0-9]\+\).*$@/dev/\1@' | sed -e :a -e '$!N; s/\n/|/; ta'))" | sort -k2n | head -1 | cut -f1); \
+  ROOT_DISK=$(sh /preseed_partman_determine_disk.sh); \
   pvremove -ff -y "$ROOT_DISK"*; \
   debconf-set partman-auto/disk "$ROOT_DISK"; \
   debconf-set grub-installer/bootdev "$ROOT_DISK"; \
