--- a/malcolm-iso/config/includes.binary/install/preseed_base.cfg
+++ b/malcolm-iso/config/includes.binary/install/preseed_base.cfg
@@ -6,15 +6,17 @@ d-i time/zone string Universal
 d-i clock-setup/ntp boolean false
 d-i clock-setup/ntp-server string 0.debian.pool.ntp.org
 
-d-i localepurge/nopurge multiselect en, en_US, en_us.UTF-8, C.UTF-8
-d-i localepurge/use-dpkg-feature boolean false
-d-i localepurge/none_selected boolean false
-d-i localepurge/verbose boolean false
-d-i localepurge/dontbothernew boolean false
-d-i localepurge/quickndirtycalc boolean true
-d-i localepurge/mandelete boolean true
-d-i localepurge/showfreedspace boolean false
-d-i localepurge/remove_no note
+d-i popularity-contest/participate boolean false
+
+localepurge localepurge/dontbothernew boolean false
+localepurge localepurge/mandelete boolean true
+localepurge localepurge/none_selected boolean false
+localepurge localepurge/nopurge multiselect en, en_US, en_us.UTF-8, C.UTF-8
+localepurge localepurge/quickndirtycalc boolean true
+localepurge localepurge/remove_no note
+localepurge localepurge/showfreedspace boolean false
+localepurge localepurge/use-dpkg-feature boolean false
+localepurge localepurge/verbose boolean false
 
 # d-i passwd/username string analyst
 # d-i passwd/user-fullname string analyst
@@ -39,11 +41,10 @@ d-i preseed/late_command string \
   in-target sed -r -i 's@(^.+\s+/(tmp|var/tmp)\s+ext4\s+.*defaults)@\1,nosuid,nodev,noexec@g' /etc/fstab; \
   in-target sed -r -i 's@(^.+/media/cdrom[0-9]*.+)(noauto)(.*)@\1\2,nosuid,nodev,noexec\3@g' /etc/fstab; \
   in-target sed -r -i 's@(^.+\s+/(home)\s+ext4\s+.*defaults)@\1,nosuid,nodev@g' /etc/fstab; \
-  in-target bash -c "echo '\EFI\debian\grubx64.efi' > /boot/efi/startup.nsh"; \
+  in-target bash -c "( echo '\EFI\debian\grubx64.efi' > /boot/efi/startup.nsh ) || true"; \
   in-target sed -i 's#^\(GRUB_CMDLINE_LINUX_DEFAULT="quiet\)"$#\1 random.trust_cpu=on elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem apparmor=1 security=apparmor ipv6.disable=1 audit=1"#' /etc/default/grub; \
   in-target sed -i 's#^\(GRUB_CMDLINE_LINUX="\)"$#\1apparmor=1 security=apparmor audit=1"#' /etc/default/grub; \
   in-target sed -i 's#^\(GRUB_DISTRIBUTOR=\).*$#\1"Hedgehog"#' /etc/default/grub; \
   in-target cp /usr/share/images/desktop-base/Malcolm_background.png /boot/grub; \
   in-target bash /usr/local/bin/preseed_late_user_config.sh; \
-  in-target grub-mkconfig -o /boot/grub/grub.cfg; \
-  in-target bash -c "(dpkg -s localepurge >/dev/null 2>&1) && (debconf-set-selections < /etc/localepurge-preseed.cfg) && dpkg-reconfigure localepurge && localepurge";
+  in-target grub-mkconfig -o /boot/grub/grub.cfg;
