--- a/sensor-iso/config/includes.binary/install/preseed_vmware.cfg
+++ b/sensor-iso/config/includes.binary/install/preseed_vmware.cfg
@@ -11,10 +11,10 @@ d-i preseed/include string preseed_base.cfg
 # install root filesystem on smallest non-USB disk
 
 d-i partman/early_command string \
-  SENSOR_ROOT_DISK=$(parted_devices | egrep "^($(find /sys/block -mindepth 1 -maxdepth 1 -type l \( -name '[hs]d*' -o -name 'nvme*' \) -exec ls -l '{}' ';' | grep -v "usb" | sed 's@^.*\([hs]d[a-z]\+\|nvme[0-9]\+\).*$@/dev/\1@' | sed -e :a -e '$!N; s/\n/|/; ta'))" | sort -k2n | head -1 | cut -f1); \
-  pvremove -ff -y "$SENSOR_ROOT_DISK"*; \
-  debconf-set partman-auto/disk "$SENSOR_ROOT_DISK"; \
-  debconf-set grub-installer/bootdev "$SENSOR_ROOT_DISK"; \
+  ROOT_DISK=$(sh /preseed_partman_determine_disk.sh); \
+  pvremove -ff -y "$ROOT_DISK"*; \
+  debconf-set partman-auto/disk "$ROOT_DISK"; \
+  debconf-set grub-installer/bootdev "$ROOT_DISK"; \
   sed -i.bak 's/-f $id\/skip_erase/-d $id/g' /lib/partman/lib/crypto-base.sh;
 
 d-i grub-installer/only_debian boolean true
@@ -22,6 +22,7 @@ d-i grub-installer/with_other_os boolean true
 
 d-i partman-auto/method string lvm
 d-i partman-auto-lvm/new_vg_name string main
+d-i partman-auto-lvm/guided_size string max
 
 d-i partman-lvm/device_remove_lvm boolean true
 d-i partman-lvm/confirm boolean true
