added menu entries for bios installer

--- a/malcolm-iso/config/includes.binary/boot/grub/grub.cfg
+++ b/malcolm-iso/config/includes.binary/boot/grub/grub.cfg
@@ -20,26 +20,26 @@ insmod play
 play 960 440 1 0 4 440 1
 
 menuentry "Live system" {
-  linux /live/vmlinuz boot=live components username=analyst nosplash persistence persistence-encryption=none,luks random.trust_cpu=on elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem
+  linux /live/vmlinuz boot=live components username=analyst nosplash random.trust_cpu=on elevator=deadline cgroup_enable=memory swapaccount=1 cgroup.memory=nokmem
   initrd  /live/initrd.img
 }
 
-menuentry "Install Malcolm Base (quick install)" {
+menuentry "Install Malcolm (quick install)" {
   linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed.cfg
   initrd  /install/initrd.gz
 }
 
-menuentry "Install Malcolm Base (encrypted quick install)" {
+menuentry "Install Malcolm (encrypted quick install)" {
   linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed_crypto.cfg
   initrd  /install/initrd.gz
 }
 
-menuentry "Install Malcolm Base (advanced configuration)" {
+menuentry "Install Malcolm (advanced configuration)" {
   linux /install/vmlinuz auto=true priority=high vga=normal preseed/file=/cdrom/install/preseed_minimal.cfg
   initrd  /install/initrd.gz
 }
 
-menuentry "Install Malcolm Base (virtual machine single partition quick install)" {
+menuentry "Install Malcolm (virtual machine single partition quick install)" {
   linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed_vmware.cfg
   initrd  /install/initrd.gz
 }
